--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,83 +1,26 @@
-header {
-  height: 100vh;
-  padding-top: 4rem;
-  overflow: hidden;
-}
-.header__container {
-  text-align: center;
-  height: 100%;
-  position: relative;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
+/* Add this CSS to your stylesheet or in the global styles */
+
+@keyframes bgColorTransition {
+  0% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: #1a202c; /* or the color you want */
+  }
 }
 
-/**========= CTA call to action =========**/
-.cta {
-  margin-top: 2.5rem;
-  display: flex;
-  gap: 1.2rem;
-  justify-content: center;
+.animate-bg-color-transition {
+  animation: bgColorTransition 2s ease-in-out forwards;
 }
-/**=========header socials =========**/
-
-.header__socials {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.8rem;
-  position: absolute;
-  left: 0;
-  bottom: 3rem;
-}
-.header__socials::after {
-  content: "";
-  width: 1px;
-  height: 2rem;
-  background: var(--color-primary);
-  position: relative; /*/*/
-}
-.me {
-  background: linear-gradient(var(--color-primary), transparent);
-  width: 22rem;
-  height: 36rem;
-  margin-top: 1.5rem;
-  border-radius: 12rem 12rem 0 0;
-  overflow: hidden;
-  padding: 5rem 1.5rem 1.5rem 1.5rem;
-}
-/**=========scroll down =========**/
-.scroll__down {
-  position: absolute;
-  right: -2rem;
-  bottom: 5rem;
-  transform: rotate(90deg);
-  font-size: 0.9rem;
+@keyframes fadeUp {
+  from {
+    background-color: transparent;
+  }
+  to {
+    background-color: #1e3a8a; /* Replace with your desired color */
+  }
 }
 
-@media screen and (max-width: 1024px) {
-  .header {
-    height: 100vh;
-  }
-}
-/**================== small phones ======= **/
-
-@media screen and (max-width: 600px) {
-  .scroll__down,
-  .header__socials {
-    display: none;
-  }
-  .me img {
-    width: 96%;
-  }
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .cta {
-    max-width: max-content;
-    display: flex;
-    gap: 1rem;
-  }
+.fade-up-background {
+  animation: fadeUp 2s ease-in-out;
 }
