--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
   list-style: none; /*no pullets*/
   text-decoration: none; /*no under line for links*/
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* css variables */
 :root {
